[gd_scene load_steps=5 format=3 uid="uid://3fcubh5tc7ji"]

[ext_resource type="Shader" uid="uid://bp36vpprtd5b3" path="res://shader/map_sample_node.gdshader" id="1"]
[ext_resource type="Texture2D" uid="uid://c6lh4ijy2qp3p" path="res://UI/item.png" id="2"]
[ext_resource type="Script" uid="uid://cun7pd1ifrlu2" path="res://scripts/sample_node.gd" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xpcum"]
resource_local_to_scene = true
shader = ExtResource("1")
shader_parameter/randomizer = 0.0
shader_parameter/color = Color(0.099986, 0.099986, 0.099986, 1)
shader_parameter/width = 10.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = false

[node name="SampleNode" type="TextureRect"]
material = SubResource("ShaderMaterial_xpcum")
offset_right = 76.364
offset_bottom = 76.364
mouse_filter = 0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5
script = ExtResource("3")
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
